# hm-fashion-recommendations

./: .gitignore  H&M_Fashion_Recommendations.ipynb  HM_Fashion_Recommendations.ipynb  README.md  pyproject.toml  requirements.txt
src/data_load/: data_load.py
src/evaluation/: metrics.py
src/features/: feature_generator.py
src/models/: als_model.py  baseline_model.py  collaborative_filtering.py  generate_recommendations.py  grid_search.py  ranker_model.py
src/optimization/: als_grid_search.py  ranker_grid_search.py
src/retrieval/: candidate_generator.py  ensemble.py  graph_search.py  item_similarity.py  previous_purchases.py  same_product_code.py  weekly_bestsellers.py
src/scripts/: generate_ranking_samples.py
src/utils/: batch_generate.py
tests/: test_customer_item_recommender.py  test_feature_generator.py  test_previous_purchases.py  test_same_product_code.py  test_weekly_bestsellers.py
tests/evaluation/: test_hit_rate.py
tests/features/: test_feature_generator.py
tests/generate_recommendations/: test_previous_purchases.py  test_same_product_code.py  test_weekly_bestsellers.py
tests/models/: test_collaborative_filtering.py
tests/retrieval/: test_graph_search.py  test_item_similarity.py  test_previous_purchases.py  test_same_product_code.py  test_weekly_bestsellers.py
