[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "recommend"
version = "0.0.1"

dependencies = [
    "faiss-cpu==1.11.0",
    "implicit==0.7.2",
    "jupyter==1.1.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.3",
    "numpy==2.3.1",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "seaborn==0.13.2",
    "tqdm==4.67.1"
]

requires-python = ">= 3.12.11"

readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JonMcEntee/hm-fashion-recommendations"
Issues = "https://github.com/JonMcEntee/hm-fashion-recommendations/issues"